-
Type:
Bug
-
Status: Closed (View Workflow)
-
Priority:
Major
-
Resolution: Fixed
-
Affects Version/s: 10.2.3
-
Fix Version/s: 10.2.4
-
Component/s: OTHER
-
Labels:None
The innochecksum option -l refers to --log, not --leaf as some user might expect.
We should remove or rename the duplicate short option.
In the MySQL version of innochecksum, there is no --leaf option at all.
- is caused by
-
MDEV-10727 Merge 5.7 Innochecksum with 5.6
-
- Closed
-