MDEV-11879: Duplicate option innochecksum -l (--log, --leaf)

Move --leaf under -e to avoid duplicate option and retain
-l for --log (to maintain compatibility with MySQL 5.7).